--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,41 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
 }
 
 .user-conainer {
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
 
 .user-list {
+  width: 600px;
+  max-width: 90%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  margin-top: 30px;
 }
 
 .user-item {
+  width: 100%;
   background: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
-  width: 250px;
 }
+
 .user-item img {
   width: 80px;
   height: 80px;
@@ -37,13 +49,6 @@ body {
 .user-item p {
   color: #777;
   font-size: 14px;
-}
-
-.user-loader {
-  width: 282px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .buttons {
@@ -62,9 +67,14 @@ body {
   background-color: #ff4d4d;
   color: white;
 }
+
 .random-btn {
   background-color: #4caf50;
   color: white;
+}
+
+.user-loader {
+  margin-top: 30px;
 }
 
 .loader {
@@ -84,5 +94,15 @@ body {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 460px) {
+  .user-conainer {
+    padding: 50px;
+  }
+
+  .user-list {
+    grid-template-columns: 1fr;
   }
 }
